--- a/Marcos_Pizza/Marcos_Pizza.csproj
+++ b/Marcos_Pizza/Marcos_Pizza.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Bootstrap" Version="5.1.3" />
     <PackageReference Include="FakeItEasy" Version="8.0.0" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.22" />
